<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>yamaledtest</name>
    <packaging>jar</packaging>
    <groupId>com.javax0.yamaledt</groupId>
    <artifactId>yamaledt</artifactId>
    <version>1.1.2-SNAPSHOT</version>
    <description>Library to support JUnit 5 parametrized tests that fetch the parameters from Yaml file</description>
    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Peter Verhas</name>
            <email>peter@verhas.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/verhas/yamaletdtest.git</connection>
        <developerConnection>scm:git:ssh://github.com/verhas/yamaletdtest.git</developerConnection>
        <url>https:/github.com/verhas/yamaletdtest/tree/master</url>
    </scm>
    <url>https:/github.com/verhas/yamaletdtest/tree/master</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <detectOfflineLinks>false</detectOfflineLinks>
                    <doclint>none</doclint>
                    <doclet>javax0.jamal.doclet.JamalDoclet</doclet>
                    <docletArtifact>
                        <groupId>com.javax0.jamal</groupId>
                        <artifactId>jamal-doclet</artifactId>
                        <version>1.7.6</version>
                    </docletArtifact>
                    <additionalOptions>
                        <additionalOption>--source-root</additionalOption>
                        <additionalOption>${project.build.sourceDirectory}</additionalOption>
                    </additionalOptions>
                    <taglets>
                        <taglet>
                            <tagletClass>javax0.jamal.doclet.JamalTaglet</tagletClass>
                            <tagletArtifact>
                                <groupId>com.javax0.jamal</groupId>
                                <artifactId>jamal-doclet</artifactId>
                                <version>1.7.6</version>
                            </tagletArtifact>
                        </taglet>
                        <tagletArtifacts>
                            <tagletArtifact>
                                <groupId>com.javax0.jamal</groupId>
                                <artifactId>jamal-snippet</artifactId>
                                <version>1.7.6</version>
                            </tagletArtifact>
                        </tagletArtifacts>
                    </taglets>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>13</source>
                    <target>11</target>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --add-opens yamaledt/javax0.yamaledt=org.junit.platform.commons
                        --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                        --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.8</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.21</version>
        </dependency>
        <dependency>
            <groupId>ognl</groupId>
            <artifactId>ognl</artifactId>
            <version>3.2.20</version>
        </dependency>
        <dependency>
            <groupId>com.javax0.jamal</groupId>
            <artifactId>jamal-engine</artifactId>
            <version>1.7.6</version>
        </dependency>
        <dependency>
            <groupId>com.javax0.jamal</groupId>
            <artifactId>jamal-yaml</artifactId>
            <version>1.7.6</version>
        </dependency>
        <dependency>
            <groupId>com.javax0.jamal</groupId>
            <artifactId>jamal-snippet</artifactId>
            <version>1.7.6</version>
        </dependency>
        <dependency>
            <groupId>com.javax0.jamal</groupId>
            <artifactId>jamal-debug</artifactId>
            <version>1.7.6</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>